# V2-Completion

./: LICENSE  README.md  THIRD_PARTY_LICENSES  pyproject.toml
v2-completion/: apps.py
v2-completion/ui_ext/: cog.py  paginator.py
v2_completion/: apps.py
v2_completion/ui_ext/: __init__.py  cog.py
